tests/ui/empty_tag.stderr
error: Invalid @tag annotation format
       help: expected '@tag <tag_name>'
       note: example '@tag users' or '@tag authentication'
 --> tests/ui/empty_tag.rs:8:1
  |
8 | /// @tag
  | ^^^^^^^^
